# microservices

./: .env  README.md  docker-compose.yml  setup.sh  start-services.sh  stop-services.sh  test-endpoints.sh  test-microservices.sh
analytic-service/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
auth-service/: Dockerfile  main.py
elasticsearch-service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup-kibana-password.sh
gateway-service/: Dockerfile  docker-compose.yml
monitoring/: prometheus.yml
nginx-gateway/: .env  docker-compose.yml  jwt_validation.lua  nginx.conf  (+1 more)
product-service/: Dockerfile  consumer.py  docker-compose.yaml  pyproject.toml
product-service/src/app/: celery_app.py  main.py  messaging.py  publisher.py  tasks.py
product-service/src/app/api/v1/: routes.py
product-service/src/app/authorization/: comment_permission.py  shop_permission.py
product-service/src/app/cache/: backend.py  invalidation.py  key_builders.py
product-service/src/app/core/: config.py  shop_client.py
product-service/src/app/models/v1/: product.py
product-service/src/app/repositories/v1/: comment.py  product_variation.py
product-service/src/app/schemas/v1/: comment.py  product.py  product_image.py  product_variation.py
shopcart-service/: .env.example  .gitignore  README.md  consumer.py  docker-compose.yaml  pyproject.toml  pytest.ini
shopcart-service/alembic/: env.py
shopcart-service/src/: main.py
shopcart-service/src/shopcart_service/: background_task.py  celery_app.py  crud.py  messaging.py  models.py  schemas.py  tasks.py
shopcart-service/src/shopcart_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shopcart-service/src/shopcart_service/api/v1/: routes.py
shopcart-service/src/shopcart_service/core/: product_client.py
shopcart-service/tests/: test_crud.py  test_product_client.py  test_tasks.py
traefik-service/auth-service/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
wishlist-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  main.py  pyproject.toml
wishlist-service/app/: main.py  models.py  product_client.py  tasks.py
wishlist-service/app/api/v1/endpoints/: wishlist.py
wishlist-service/app/rabbitmq/: config.py  connection.py  consumer.py  publisher.py  schemas.py
wishlist-service/migrations/: env.py
wishlist-service/migrations/versions/: dad475497951_initial_migration_for_wishlist_table.py
(+101 files in other folders)
