[project]
name = "shopcart_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]


[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "coverage>=7.3.2",
    "pytest-xdist>=3.5.0",
    "responses>=0.24.1",
    "faker>=20.1.0",
    "factory-boy>=3.3.0",
]
